updated for publishing first version

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,19 @@
 .vscode/**
 .vscode-test/**
-src/**
 .gitignore
+.gitattributes
 .yarnrc
-vsc-extension-quickstart.md
+src/**
 **/tsconfig.json
-**/eslint.config.mjs
+**/tslint.json
 **/*.map
 **/*.ts
+**/*.tgz
+node_modules/**
+webpack.config.js
+.github/**
+.eslintrc.json
+.npmrc
+vsc-extension-quickstart.md
+**/eslint.config.mjs
 **/.vscode-test.*
