--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "ollama-copilot",
-  "displayName": "ollama-copilot",
-  "description": "AI Chat feature powered by Ollama Local LLMs",
+  "name": "ollama-dev-companion",
+  "displayName": "Ollama Dev Companion",
+  "description": "AI Chat and Inline Code Suggestions powered by Ollama Local LLMs",
   "version": "0.0.1",
+  "publisher": "Gnana997",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gnana997/ollama-copilot.git"
+  },
   "engines": {
     "vscode": "^1.97.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onStartupFinished"
-  ],
   "main": "./out/extension.js",
+  "icon": "media/png/ollama-icon.png",
   "contributes": {
     "viewsContainers": {
       "activitybar": [
         {
           "id": "ollama-chat",
           "title": "Ollama Chat",
-          "icon": "media/ollama-icon.svg"
+          "icon": "$(symbol-misc)"
         }
       ]
     },
@@ -61,9 +64,11 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
+    "vscode:prepublish": "npm run build",
+    "compile": "webpack --mode development",
     "watch": "tsc -watch -p ./",
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
     "test": "vscode-test"
@@ -77,7 +82,11 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.19.0",
-    "typescript": "^5.7.3"
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.7.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "ollama": "^0.5.14"
