--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ollama-dev-companion",
   "displayName": "Ollama Dev Companion",
   "description": "AI Chat and Inline Code Suggestions powered by Ollama Local LLMs",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "publisher": "Gnana997",
   "repository": {
     "type": "git",
@@ -65,6 +65,10 @@
       {
         "command": "ollama-copilot.openChatPanel",
         "title": "Open Ollama Chat Panel"
+      },
+      {
+        "command": "ollama-copilot.updateOllamaHost",
+        "title": "Update Ollama Host"
       }
     ]
   },
